--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>VD Portfolio</title>
-  </head>
-  <body style="background-color: #333; color: lightyellow">
-      <section class="whoami">
-        <h3>Hello there! </h3>
-	<div>
-		<p>
-		Welcome to my portfolio site, this is a work in progress<br>
-		Im a backend developer looking to learn and share knowledge.<br>
-		I'll have coding exercises, hobby projects, interview challenges postings<br>
-		and much more... 
-		</p>
-	</div>
-      </section>
-  </body>
+<html>
+<head>
+  <title>Movie Comparison</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+  </style>
+</head>
+<body>
+  <h1>Comparações de leis</h1>
+  <table>
+    <tr>
+      <th>Nome</th>
+      <th>Cidade</th>
+      <th>Numero de palavras</th>
+    </tr>
+    <tr>
+      <td>Lei 1</td>
+      <td>Riberão Preto</td>
+      <td>100</td>
+    </tr>
+    <tr>
+        <td>Lei 1</td>
+        <td>Riberão Preto</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>Lei 1</td>
+        <td>Riberão Preto</td>
+        <td>100</td>
+    </tr>
+    <!-- Add more rows for additional movies -->
+  </table>
+</body>
 </html>
