--- a/index.html
+++ b/index.html
@@ -1,44 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Movie Comparison</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      width: 100%;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-  </style>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Comparison</title>
+    <style>
+      body {
+        background-color: #222;
+        color: #fff;
+        font-family: Arial, sans-serif;
+      }
+      h1 {
+        color: #fff;
+        text-align: center;
+      }
+      table {
+        border-collapse: collapse;
+        width: 100%;
+      }
+      th, td {
+        border: 1px solid #444;
+        padding: 8px;
+        text-align: left;
+      }
+      th {
+        background-color: #333;
+      }
+    </style>
+  </head>
 <body>
   <h1>Comparações de leis</h1>
   <table>
     <tr>
-      <th>Nome</th>
-      <th>Cidade</th>
-      <th>Numero de palavras</th>
+      <td><strong>Title</strong></td>
+      <td>The Shawshank Redemption</td>
+      <td>The Shawshank Redemption</td>
+      <td>The Shawshank Redemption</td>
     </tr>
     <tr>
-      <td>Lei 1</td>
-      <td>Riberão Preto</td>
-      <td>100</td>
+      <td><strong>Director</strong></td>
+      <td>Frank Darabont</td>
+      <td>Frank Darabont</td>
+      <td>Frank Darabont</td>
     </tr>
     <tr>
-        <td>Lei 1</td>
-        <td>Riberão Preto</td>
-        <td>100</td>
-    </tr>
-    <tr>
-        <td>Lei 1</td>
-        <td>Riberão Preto</td>
-        <td>100</td>
+      <td><strong>Year</strong></td>
+      <td>1994</td>
+      <td>1994</td>
+      <td>1994</td>
     </tr>
     <!-- Add more rows for additional movies -->
   </table>
